tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_88.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := ((((y * z) * (+ 1)) - ((+ 1223) + (0 - y))) DIV (((200 MOD 1) * (y + 2)) DIV (- (1223 * y))));
               y := ((((1223 - 0) * (200 DIV 1223)) + (- (x DIV 1))) DIV (- ((y + 2) - (x MOD 1))));
               y := ((+ (+ (2 * 200))) MOD ((+ (z - 1223)) + ((+ z) * (1223 MOD 1))));
               p := ((((+ x) + (1 DIV 2)) > ((y MOD 2) * (2 DIV x))) OR (((200 MOD x) + (- 200)) < (- (+ 0))));
               z := (((- (0 * 2)) * (- (2 DIV 1223))) MOD ((+ (- y)) MOD ((x DIV 1223) + (2 - 200))));
  (* error *)  z := ((+ ((r * 2) DIV (1 - 0))) * (- ((200 MOD 0) - (1223 + z))));
               y := (((- (2 * z)) DIV (+ (- 200))) DIV ((- (1 + 200)) - ((1223 DIV 2) DIV (1 DIV x))));
               z := (+ ((+ (+ y)) MOD ((z - y) + (200 - 0))));
               r := (~ (((1 DIV 200) MOD (200 DIV z)) = ((1223 MOD 1) MOD (+ x))));
               q := ((- ((+ 1) - (1 + 0))) > (((+ 1) + (2 MOD 0)) MOD (- (- 200))))
END Test16.